--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@css-hooks/react": "^2.0.4",
     "@css-hooks/recommended": "^2.0.4",
     "jotai": "^2.8.2",
-    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
@@ -46,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-security": "^3.0.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.4",
     "ts-essentials": "^10.0.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
